--- a/mujun1209-updateBYbigdreamstudio/config.ini
+++ b/mujun1209-updateBYbigdreamstudio/config.ini
@@ -8,7 +8,7 @@ OUT_DIR =
 #标示任务结束符 { / / / } 中的 "/" 分割的每一项代表的含义
 SPLITE_CONF = ["begintime","endtime","assign","hour"] 
 #该份计划下的任务的默认作者
-AUTHOR = muj
+AUTHOR = zhougf
 #csv文件的标题栏定义
 CSV_HEADER = fixed_version,subject,author,assigned_to,start_date,due_date,estimated_hours,description
 #csv的内容定义 在程序执行时会动态替换@ 为% 。即@的用法同%
@@ -19,9 +19,9 @@ CSV_FORMAT = @(subversion)s,@(name)s,@(AUTHOR)s,@(assign)s,@(begintime)s,@(endti
 #redmine 的主域名
 REDMINE_HOST =  http://192.168.1.41:3000
 #登陆redmine的用户名
-USER_NAME = muj
+USER_NAME = zhougf
 #登陆密码
-USER_PWD = asdfjkl;
+USER_PWD = zgf#00838@taosteel
 #对应项目在redmine 中的自定义名称;可选配置,如果配置该项，则上传文件默认只上传该配置的文件和项目。如果没有配置该项则根据BATCH_DICT 的配置
 PROJECT_KEY = 
 #ms-tg-it-yf-mhsq-csy
@@ -45,4 +45,4 @@ BATCH_DICT = {}
 
 [project]
 #系统中的项目中文名称和key 的映射
-PROJECT_MAP = {"实施.交易平台":"ms-tg-it-ss-jypt","实施.淘钢仓储":"ms-tg-it-ss-tgcc","实施.缪氏ERP":"ms-tg-it-ss-mserp","实施.门户社区":"ms-tg-it-ss-mhsq","测试.新交易平台":"ms-tg-it-cs-xjypt","研发.门户社区":"ms-tg-it-yf-mhsq","研发.测试用":"ms-tg-it-yf-mhsq-csy","运维.IT技术支持":"ms-itjszc","运维.系统运维":"ms-tg-it-xtyw"}
+PROJECT_MAP = {"实施.交易平台":"ms-tg-it-ss-jypt","实施.淘钢仓储":"ms-tg-it-ss-tgcc","实施.缪氏ERP":"ms-tg-it-ss-mserp","实施.门户社区":"ms-tg-it-ss-mhsq","测试.新交易平台":"ms-tg-it-cs-xjypt","研发.门户社区":"ms-tg-it-yf-mhsq","研发.测试用":"ms-tg-it-yf-mhsq-csy","运维.IT技术支持":"ms-itjszc","运维.系统运维":"ms-tg-it-xtyw","研发.仓储信息管理平台":"ms-tg-it-yf-ccxxglpt","仓库库存管理系统":"ms-tg-it-yf-ckkcglxt"}
